# Crypt

./: README.md  main.py  package.json  pyproject.toml
src/: client.py  enCrypt.py  rabinMiller.py  server.py  test.py  theMath.py
src/reader/: client.py  enCrypt.py  server.py  test.py
