[tool.poetry]
name = "Crypt"
version = "0.1.0"
description = "A peer-to-peer encrypted command line chatroom."
authors = ["CarterFaceySmith <carterfaceysmith@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
cryptography = "^38.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
